--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>prueba Git</title>
+    <link href="estilo.css" rel="stylesheet"/>
 </head>
 <body>
     <h1>Esta es una prueba para Git - Github</h1>
