se agrego un segundo titulo en el index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Esta es una prueba para Git - Github</h1>
+    <h2>Este es un segundo titulo</h2>
+
     <script src="alert.js"></script>
 </body>
 </html>
